bazı güncellemeler
